[gd_scene load_steps=2 format=3 uid="uid://milestone_celebration_popup"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/milestone_celebration_popup.gd" id="1_popup"]

[node name="MilestoneCelebrationPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -140.0
offset_right = 180.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(180, 140)
script = ExtResource("1_popup")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="IconLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "üéâ"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Milestone Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.42, 0.325, 0.267, 1)
text = "Description of the milestone achievement"
horizontal_alignment = 1
autowrap_mode = 2

[node name="UnlocksContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 4

[node name="UnlocksLabel" type="Label" parent="MarginContainer/VBoxContainer/UnlocksContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.18, 0.49, 0.196, 1)
text = "Unlocked:"
horizontal_alignment = 1

[node name="UnlocksList" type="Label" parent="MarginContainer/VBoxContainer/UnlocksContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.18, 0.49, 0.196, 1)
text = "üè† Mill"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_horizontal = 4
text = "Continue"

[node name="ConfettiContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
